force-app/main/default/objects/ToDo__c/fields/Count_of_open_SubTodo__c.field-meta.xml
<CustomField>
    <fullName>Count_of_open_SubTodo__c</fullName>
    <label>Count of open SubTodo</label>
    <summaryFilterItems>
        <field>SubToDo__c.IsDone__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>SubToDo__c.ToDo__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>