force-app/main/default/objects/ToDo__c/fields/Count_of_subTodo__c.field-meta.xml
<CustomField>
    <fullName>Count_of_subTodo__c</fullName>
    <label>Count of subTodo</label>
    <summaryForeignKey>SubToDo__c.ToDo__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>