force-app/main/default/objects/ToDo__c/fields/Create_for_test__c.field-meta.xml
<CustomField>
    <fullName>Create_for_test__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if testing</description>
    <label>Create for test</label>
    <type>Checkbox</type>
</CustomField>