force-app/main/default/objects/ToDo__c/fields/Id_Todo_from_another_org__c.field-meta.xml
<CustomField>
    <fullName>Id_Todo_from_another_org__c</fullName>
    <description>Id recieved from anothe org as a result of integration</description>
    <label>Id Todo from another org</label>
    <length>180</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>