force-app/main/default/objects/ToDo__c/fields/Insert_from_remote_org__c.field-meta.xml
<CustomField>
    <fullName>Insert_from_remote_org__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insert from remote org</label>
    <type>Checkbox</type>
</CustomField>