force-app/main/default/objects/ToDo__c/recordTypes/Overdue.recordType-meta.xml
<RecordType>
    <fullName>Overdue</fullName>
    <active>false</active>
    <label>Overdue</label>
</RecordType>