force-app/main/default/objects/ToDo__c/recordTypes/Tomorrow.recordType-meta.xml
<RecordType>
    <fullName>Tomorrow</fullName>
    <active>true</active>
    <label>Tomorrow</label>
</RecordType>