force-app/main/default/objects/ToDo__c/listViews/Later_ToDo.listView-meta.xml
<ListView>
    <fullName>Later_ToDo</fullName>
    <filterScope>Queue</filterScope>
    <label>Later</label>
    <queue>Later</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>