force-app/main/default/objects/ToDo__c/listViews/Overdue_ToDo.listView-meta.xml
<ListView>
    <fullName>Overdue_ToDo</fullName>
    <filterScope>Queue</filterScope>
    <label>Overdue</label>
    <queue>Overdue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>