force-app/main/default/objects/ToDo__c/listViews/Today_ToDo.listView-meta.xml
<ListView>
    <fullName>Today_ToDo</fullName>
    <filterScope>Queue</filterScope>
    <label>Today</label>
    <queue>Today</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>